--- a/EncryptPad/Form2.resx
+++ b/EncryptPad/Form2.resx
@@ -130,4 +130,7 @@
         kdQaQ+WBirNYxavIWBxUPoJ5jiHzAT9bBjfcBm47+Xe8QqH4JyQSP8mesSKSooDOAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
