--- a/Crypto Notepad/AboutFrom.resx
+++ b/Crypto Notepad/AboutFrom.resx
@@ -155,7 +155,8 @@
     <value>CustomSettingsProvider: http://www.codeproject.com/Articles/20917/Settings-Provider
 AES: http://easylab.net.ua/net-c-windows-forms/c-algoritm-shifrovaniya-aes
 CustomRichTextBox: https://code.msdn.microsoft.com/windowsdesktop/How-to-find-the-text-and-e92b8d78
-MsgBoxCenterParent: http://stackoverflow.com/a/2576220/4430027</value>
+MsgBoxCenterParent: http://stackoverflow.com/a/2576220/4430027
+Icons: http://www.fatcow.com/free-icons</value>
   </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>44</value>
