Added auto check update settings

--- a/Crypto Notepad/SettingsForm.resx
+++ b/Crypto Notepad/SettingsForm.resx
@@ -120,4 +120,81 @@
   <metadata name="colorDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAABQAAAA8AAAAVAAAAFgAAABQAAAAMAAAAAwAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAADQAA
+        ABIAAAANAAAABAAAAAAAAAAAAAAAAAAAAAUAAAAYAAAAMwAAAEEAAABDAAAAPgAAAC0AAAAUAAAABAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAwAA
+        ABQAAAAuAAAAPAAAAC4AAAAUAAAAAwAAAAAAAAAAAAAADwAAADOtexjht4MZ/7eEG/+4hRz/m28ZtgAA
+        ADIAAAAUAAAAAwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAMAAAAUAAAAMqJ0GcW+iR//onQZxQAAADIAAAAUAAAABAAAAAAAAAAVrnsW3+rLjf/rslb/6KtK/9ug
+        O/+5hh7/oHQZwgAAADIAAAAUAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAADAAAAFAAAADKfcxnByI8l/+emPv/Jkyz/n3IXwQAAAC4AAAANAAAAAAAAABbAjir//+Gw/+Ws
+        Tv/lq0z/5apJ/96iPf+5hh3/oHMZwQAAADAAAAARAAAAAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAwAAABQAAAAyn3MZwceOJf/kpDz/5apH/+iyV//Mmjr/pXYXwAAAABIAAAAAAAAAFMqb
+        Qv//3a7/5a5S/+WtUP/kq0z/5apJ/96iPf+5hh3/oXQZwQAAACkAAAANAAAAAgAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAMAAAAUAAAAMp9zGcHHjiX/5KQ7/+SpRv/lrlH/7r5x///sy/+2ghb/AAAADQAA
+        AAAAAAAMuoYd///nxP/sumv/5a9U/+WuUf/kq0z/5apJ/96iPf+5hh7/elgUhAAAACcAAAANAAAAAgAA
+        AAAAAAAAAAAAAAAAAAAAAAADAAAAFAAAADKfcxnBx44l/+SkO//kqUb/5K1R/+29bv//58T/1adW/7F+
+        F7MAAAAEAAAAAAAAAAOuexWf5Lp4///lwP/sumv/5a9U/+WuUf/lq0z/5apJ/9ieOP+3hBv/e1kUhQAA
+        ACYAAAAKAAAAAQAAAAAAAAAAAAAABAAAABQAAAAyn3MZwceOJf/kpDv/5KlG/+StUf/tvW7//+fD/9Sm
+        VP+vfBSuAAAAAwAAAAAAAAAAAAAAAAAAAASuehGv6cGC///lwP/sumv/5a9U/+WuUf/lq0z/5qpJ/9Sc
+        Nf+3hBv/fVoUhAAAACEAAAAIAAAAAQAAAAAAAAANAAAALp9zGMHHjiT/5KM7/+SpRv/krVH/7b1u///n
+        w//UplT/r3wUrgAAAAMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAOuehGu6cGC///lwP/su2v/5a9U/+Wu
+        Uf/lq0z/5qpJ/9ScNf+3hBv/PCsKVAAAAB8AAAAIAAAABAAAAByldRTBx4wf/+ShOP/jqEX/5K1R/+29
+        bv//58P/1KZU/698FK4AAAADAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAASvexGu47l3///m
+        wv/su2z/5a9U/+WuUf/lq0z/5qpJ/9ScNf+3hBv/Py0KVgAAACIAAAAaAAAAM8eSJv//8sr/6bJY/+Os
+        Tf/tvG3//+fD/9SmVP+vfBSuAAAAAwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAKldBFg1KVT///nw//tu2z/5a9U/+WuUf/lq0z/5qpJ/9ScNf+4hBr/NSUGVwAAAD5XWWC+tJBH/9Wm
+        TP//6cD/8sZ+///mwv/UplP/r3wUrgAAAAMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAKldRJh1KZU///nxP/tu23/5a9V/+WuUf/lq0z/5qpJ/9WcNP+8hRT/VlZWuaSm
+        rP+8vsb/tZBI/9KjSf//7Mr/1aZU/698FK4AAAADAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAKodxNgzp9J///gt//uvG7/5bBV/+WuUf/lq0z/5qpJ/9ab
+        Mf+3iS3/vLu+/7q8wf/q7/j/xKFZ/8KNJP+0fxWvAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAEAAAADQAAABMAAAANAAAABAAAAAGSZxIixZM0///guP/uvG7/5bBV/+Wu
+        Uf/lq0z/5qpI/9WZLf+zhSn/5+nr/9ve4/+ChZGrAAAAAwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAwAAABQAAAAuAAAAPAAAACsAAAANAAAAAAAAAAGUaRIkxpQ0///h
+        uf/uvW//5rBV/+WuUf/lq0z/5qpH/9WZLP/Gljb/gYKJsAAAAAgAAAAAAAAAAAAAAAEAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAMAAAAUAAAAMnl2dMWKh4X/enl4xQAAAB0AAAAHAAAABAAA
+        AAdeQgkwwo0k//jUnv/vvW7/5rBV/+WuUf/mrU3/56lD/7N/GP8AAAA6AAAAHgAAABUAAAAXAAAAGAAA
+        ABcAAAAUAAAADQAAAAQAAAAAAAAAAAAAAAAAAAAEAAAAFAAAADJ3dXPBm5iW/7e0sv+IhYP/AAAANwAA
+        ACMAAAAeAAAAIwAAADVUVFa2uYov//jSm//vvW//57FX/+mwUv/IjR7/pJBq/2RkaOkAAABDAAAAQAAA
+        AEIYGBhOAAAAQwAAAD8AAAAwAAAAGQAAAAcAAAABAAAAAAAAAA0AAAAud3VzwaCcm//Cwb7/vLu5/5qX
+        lf9xb269OTk4aT49PWo4ODlpVVZavqSlqv+7ubr/togs//nTnf/tumf/1Jwy/7uXUP+5u8L/paSk/2tp
+        Z+R6eHb2enh1/4SCgP93dXP/d3Vz/2hnZcUAAAA8AAAAHQAAAAYAAAAAAAAAE3t6eMCtq6r/1tTT/8jH
+        xv+fnJv/k5CP/5mWlP+CgX//g4F//4KAfv+Qjo3/wb++/7u7vf/m5+f/wpIz/7V/Evy1pH//8PP7/8XE
+        xf+5uLb/rqyq/768u//U0tL/09HR/9TS0f/Pzcz/p6Wj/358ev80MzJQAAAAEAAAAAAAAAANioeF////
+        ////////wL69/56cm/+enZz/v727/7e1s/+xrq3/sK2r/5CMiv+SkI7/8fDw/9ze4P+DhpCrAAAAB3l6
+        g6vGxcj/7+/v/8PBv/+3tbP/xMLA/8jGxP/OzMr/1dPS/93b2v/g4N//yMbG/3d1c90AAAAQAAAAAAAA
+        AASIhoS0npuZ/7u5uP/d3Nz/v728/8vJyP/Ewr//vbu5/7ezsf+wrav/raqo/4yIhv+gnp3/hYODrgAA
+        AAMAAAAAAAAAE3NxcMLLycj/3NrZ/7i2tP+8urj/w8HA/6yqqP93dXP/eXd1/3l3df96eHb/fHp4/wAA
+        AAYAAAAAAAAAAAAAAAAAAAADfHp4rLOxsP/n5uX/0M7N/8rIxv/DwcD/vbu5/7a0sv+vrKr/v727/3p4
+        dv8AAAAVAAAAAAAAAAAAAAAWfXx75snIyP+9urn/srCu/7i2tP/Av7z/jouK/wAAABYAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAANg399///////e3t3/0NDP/8vJyP/FwsL/vbu5/8TC
+        wf//////e3l3/wAAAA0AAAAAAAAAAAAAABaDgH7/6+np/6ilo/+uq6n/tLOx/727uf+QjYv/AAAAFgAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAASBfnyysrCv///////f3t3/09DP/8zK
+        yf/Qz83//////66trP94dnSzAAAABAAAAAAAAAAAAAAAFoSBf//n5uX/qKWi/6uopv+wrav/uLa0/4+N
+        i/8AAAAWAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAN+e3musa+u////
+        ///h4N//09LR/9nY1/+sq6n/aWdmswAAABwAAAAFAAAAAAAAAAAAAAARhYKA//Tz8/+npKL/qqel/62q
+        qP+zsK7/j42L/wAAACcAAAAWAAAAFgAAABYAAAARAAAABgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAN9e3musK2s///////j4eD/2NfV/5qYlv92dHLkAAAAOgAAABwAAAAKAAAABAAAAAqGg4Ho39/d/7+8
+        uv+ppqT/rKim/6+sqv+PjIr/AAAASAAAAEMAAABDAAAAQwAAADIAAAARAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAN8eniurq6r///////t7Oz/3Nva/52bmf92dHLrAAAAQAAAACsAAAAdAAAAEXh1
+        c2iinp7/6urp/62qp/+ppqT/rKmn/56bmf+BgH7/gX98/399e/+AfXv/goB+/wAAABEAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAN7eXeur62s//z8/P/+/v3/8/Lz/7Sysf93dXP/TEpJhz8+
+        PWoAAAAwAAAAGoiFg+evrKv/6+rp/7+8uv+npKL/qaak/6uopv/Bv7z/6+rp/+Pj4v+Bf33/AAAABwAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAN9e3magoB+/9HQz//9/f7//////+Xl
+        5P+uraz/lZOR/29ta78AAAAfAAAADYmGhOeinp7/39/d//Pz8v/y8vH/8/Py/+zs6//Jx8b/iIWD/2tq
+        aCcAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABgX1wPeXd1mYF/
+        ffeZl5X/s7Kx/769vP/BwL//np2b/3d1c8EAAAAEAAAAAoWCgHWHhILlhIF//5mWlP+Cf33/goB+/399
+        fK13dXMmAAAAAQAAAAAAAAAA/////8B//4OAP/8BgB/+AIAP/ACAB/gAgAPwAIAB4ACAAMABwABAA+AA
+        AAfwAAAP+AAAH/wAAD/+AAB/4AAB/8CAA3+AAAAHAAAAAQAAAAEAAAABAAAAAQAAgAHAAYA/4AGAP+AB
+        gD/wAYAB+AAAAfwAAAH+AAAB/wAAAf/AAAM=
+</value>
+  </data>
 </root>
