--- a/Crypto Notepad/Form1.resx
+++ b/Crypto Notepad/Form1.resx
@@ -135,10 +135,235 @@
   <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>438, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox12.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAABidJREFUaEPt
+        mE1oVFcUx6WIiBQJIRQRCaVI6CILKV0UKdJF6EKkC+miiJSCjUKIRUyC4EIwYpoQQ0g0UfNhNIlfWSTi
+        VzQm0ZjESRzHJESQLkqXLqSEIkOREl7/v8s9w3SYaT5mJm7mwOHNvHfPOf//Oeeed2fW5SQnOclJTnKy
+        EqmsrCxsbW3de/bs2X26Fp0/f369f7RqkY8t586d2yOf+1taWnZcuHBhg3+UWZHzvRcvXvyjt7c3uHr1
+        atDR0bGgwEcE4CO/ZMWiJHwt+0hPT09w7dq1oKurK6p7v+reRr8kM6Ks7Mb5kydPgnA47HRqasoREYl6
+        v2xFIqAlbW1tC8PDw8GLFy9iPvv6+gI9W5XPpEKbyOHAyMiICzA4OOh0cnLSBV4NCfn7tr29/S0JwcfQ
+        0FBw7969gO/EULL+VsW3+eXpiYIVdnZ2/objhw8fBnfv3nXB0PHxcQeA8kNiOe0EeDI/NjbmbB88eBDc
+        v38/5pNK3LhxY1H+dnuT9EQBC9T7ITI+OjrqglgVUEhEIpEYCW+WVOSrRJlfePr0aSzz5gcSkIGA9tk/
+        qsAX3ix9kbO6W7duOaCPHj2KBTOF3MuXL/+XhHy4toEwa/GDLVU1EoAnSUpYRNXM3DSSs63KXoggRoLP
+        BDd99uxZMDMzk7SdaBsyD3jWsJ/IPmpJeP78uaum2vUvrd/lTTMnclokDQOcDAKCwICAEAqJ2dnZ4Pr1
+        67FKyKaEkQs4nmFn67GFPJnnuda90/rvXMBsiJx/Jo1AgkxSbgAAhnHIdXp62kgsNjc3TyrzbyYmJoK5
+        uTm3HgLxJNgLPBf4qNose+BNRGC7dIbsGwkyacBQI8FMZ8POz8+7EWkEjCzg2T9UaE3Am4iAaydIABRw
+        gAKgKWP31atXjiQkHj9+7NRIGnj1fHbbJpUoqGsnsk97QAJggOczSl8z7+27kWMP+cxHtVfWHryJCLh2
+        MhJk2ggA3JTvZJ9nVITNrsyvbdukEhGgnULx7WR9zhXgRoBp49uGUfnhwZvoKFym80sQCoXchr5z545T
+        jh320uM+fX/z5s1A02nam354oQ2YImScTMeDT1QqQgU4AMqubjlnp6wKbcDLB2BsWM5JALWDWTKllZhQ
+        nkTmjs0rFcs8G5OsJgPLS46XHp+52mcqBQl+HC11AMyKePBRwDNR7DjMFQUoE4k9wXP63+6nIrFm7WRt
+        Y+ABZODsSkUA2N3d7cAClDcvz9jQXFFIrmklyDynSsCT3XjQpgb+8uXLjMoj/JaABMeLVCTwlXUSGpWA
+        jzJtrG2SgefFdeXKlXcNDQ0/YFdXV+dedkYCe9YaCe6zsfHJj3umkwuYSVF2duqH/Z9kMHHaGBHuk3mB
+        j545c2afN3Vy7NixItmHGa+0TPyeMF82DKiECP/iTTMj+g3bRXCbNgbernaEEPj3yvh+bA4cOLBeugHl
+        e1VV1edqpzn8kG0mFLam3CcB6KVLl97W1tYWYJe2HD58eJtaJwJAKpA452kZ3gPq+aiC/oSNQG+Sfhyv
+        3BeJYk0bR4LfAFSAz/gxvyRJ74jFmpqaPd4XiVj+hGKxVwzXi8B2ZS4MyEQC9C49zd8gp0+fListLQVs
+        njQ/hW4Sia/UInO3b992bcdewKf55Z7aaPHUqVPfs16KT0fC1ENNLn4RBhjnHTp0KK++vr6TH/U4p38J
+        SqkhJPDvq6urjwj8Fq3fKuVakEQ/kfK8oKKi4htt1tdGAp9UA598Vsu+KS8vL/Y2EP8PCQ81tfjFGBE4
+        XwF3qfSvBwYGYqdMsqVejZ48ebJSa7ZJC6UAJChV2JygAIEca7ccPXq0RCTm+/v7Yz+GIME+ks9yvxaN
+        EfDwlhYthulGKYEB5LKm6dLDXx7aE/ONjY2Dx48f/1GZB5ADxTopNlQP+3i19sIf67eKxE5t+i75nNER
+        +/empqaxEydO/Hzw4MFEfyv/i0VGRoLAZGGz2ilfe6JYuqOsrIwgOCcIwFjHelfmFGqtaRXJE9h82kU+
+        v5TPT3XPKm8+mWSrP2Zg7J1YVt1o9J/tnutPb7Kk+PXmE03mk++rB54oOPNKcNO0Anh/iT7T9puTnOQk
+        JzlZhqxb9y/IfsJRyFDF/QAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="pictureBox5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAANySURBVDhPdZFdTJtlGIafI+PRMBsiOBczGpcoYcyf
+        HahnakzMTEwUNTP+JB5pTCYwa9uV9Zfva/laQLYpjVQQSv+gpQwobWk7WmRiKUMKw8gKsxRDKT+FzcUT
+        k92+XxXPfJPr4H3z3PfzPs9NgrmNeKOpiFbPk6JR3eQbGsbI6BgMRgHnpbKrfU531fc2++9uzyD8YyHY
+        3QPotTsXbA6XpGjAGQRq4pupUaVzDY/4cf8+oOf4jedfePGtz859/uaA14flW2nsFfaxtb2DTCaLSGQC
+        XT02FA30nJE0Oq5f7HDnzl0MeAdBRNWMBzu+td5bvLmEdHoVvquj6HO4Yen8DhZrFzo6rSCj0EI9NgeZ
+        Wr7CVn4LN+bmsbBwEzKFslscqbX9Mtay6wiGwhgfj6Dt0hXR/Nn/MDSbh6zdvciur2NicgopJhaLpTIF
+        VBp9u6HZhMzaGqZ/mkFiZhbN5laITTneyPYmEDMQcPt2Bv5ACBPxH9Bp7Ub9+S+Qy+Xg6vdCrdXj1+U0
+        ZmfnkEjewEwiCbYv6DgDmAFIeVEd7e6xIxydgHfQh9PPnX79o/fODvXbbchlM9BodJifT+HH6QRSqUXs
+        bG9jv7CHlZUVNKo0+2wMqrygVEWbmngo5bIouz/AeFwite7UXOjB7kYWyUQCfXYn6uob0GYSoG1UoqGu
+        Lsnqashsbi2aMMSlVB7iYnRIG+yt9axiep/FGf0NEf8I1CoVvmyod/5bJ3LCqLlI9E2LQBaBpxJ+ko5w
+        1+ghTcDxqT+DZAF4f3QLr3i3cUphRX5tFcNux1+1g7c6SzShgVJW+7AhRlTKx6iMv0blXISOaAPOdzzp
+        oviD0U2c8eZQbfkFVTLrbtDVk1cHlpG8B7ztWUGpdsx1lAsTPcaH6Sg3To/oAp6Xun7G7B4gmyrgjGcD
+        NZYllMmcfvbdkyVSp/fl/jzeHc5j7g+g1rEEUUPPXLlOT1+eoqda41i4C3zozzNxDidZ58Oy/hATH3/U
+        EKUKlS9YbVnEq+4NnB3ZxOKfgKihU5euU027aDCJT8IFvOHbRHVHCofl/4gFeT2VG9msRJIKuSNU9fU8
+        XhvI4ePgLp5kGjrGjxepULhjJ0xxSIQJlCtcYpzHOYWURMqMcTpmiIgmlRVyZ7TSFMMT5jhEjfh4cCSM
+        g4jEWP/vHETOIMnfymoyqCgZt44AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAIJSURBVDhPnZPNaxNRFMXPX+LGP0Fod25UqmhFuxNc
+        6cKVGxEKLqrQIkpt0kVRahcFm5qFSWY0GZs2WvzArwYFoWubmomZJDVpmmlMY8bjuy82TUyg0AM/7rtz
+        3zvvXpiHp9FoKWyaDEUifNJBWMewYTBimnm1D1HL6gKyYT/lcjm54HEvE8jNom9rKcU611LrOkoumpuf
+        19FxHIYMI/i/CaRN0fd0mmnbpp2xdZRcFAgGmS8U9Fo6UeOEnsVi7QZhXbQzWf7IOi0kF60kk9pktxMZ
+        ORqzELMWYFlxZRBuGjjKPZfPt5B8y63oWrtCEYOWtYRE/C1eLn7YM8gXNljY+NmBfMspdK1Q1PtMY4HL
+        8SSOjQMDE9gzKJZKPSmVNlkuu6y6nt6XiCV5XB0e9APnJtsMNstbPajQrdTo7ZA+6xL7b4FHx8CBu+Cg
+        D/fPtxtUXLeL7e0qG3XS//wyL8yAD7+Cq8XrnF0Fr8yBZ3140DKoVqtd1H6pq5X6RsCpFdD/ETqf/ARO
+        fwZP3wNbBrVaXbHTwe96c+7+m2Ayc02vd/UlO8xT42Lw70fyPI9eo9EB/+gS+5TBnWVw9EWzA4kTr8Ez
+        0oE8pP008+Yqh6bAsSXwfWqYtxPgxWnwxAhCeBQIvJK/S79ANU478k4MM8pF6x1vzA7xpGpZ2pab9WHg
+        kAKHFUcOgDoM/AVHyvZVwuglRAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="pictureBox11.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAI/SURBVDhPjZPLb1JBFMb5N6zWRU2MCxJr3Fit0fgH
+        uHDTmNSlaeKCtNWNj4U0xhpf6UaNJk1seS24XJ7WapsIWrGRaLTaYEq0IFDgXigUkF4Kl69zBgIl1Ogv
+        98uZc2fONzOZGY3T7c7aHA4Ioghrm2w82ux2iA6HpPkbNOBfpFIpmsDcKGmHZiZ+rYaZIlgNR3iknDCY
+        TDwmk0kIdrulUdaClkn8jkYRjcUQi8d4pJwwWiyQZJm3aSWi0yU0SuvQXolYPIG1RLIpyomPgQBMzMRg
+        tvDc6niBRmkdq61ukGTuKUlqivJ8scD7dmJx+XY3kOQ05HSmTZLMlMlB3qggNKfH0qODCE4eQchwAivG
+        U4/bDNaz2U7lcsgVy1iZu4mQuQ+V70NAaBi1HzrEPWeZyeknTYPcRr5T+T8oKMD78T2oBkeAn1cxc/04
+        Zm/0s2O7huBUP5oGhWKxQ8WSgk0V8N3qAsJ6IDIG9+XD8FzpBdbG8W2yr2VQKpXatalA2QIqrG9e3wXl
+        8yVUlnRQl0dQC46y7Qzjy7NjLQOFjVaUcl3lCraqAPvw4W430t7zUIM65L3noPgHUFoYwPLUSXhu9wrN
+        i6SqKtRqlcca/wMs3uvGuu8CX37GN4j5sX14e6cH/odaOPVaKzuD/Rp6SLsReLAXCecZ1L4OIctW8Gmi
+        h/8XXvrpHhzlxcS00eilB8VfINuOVWRt1yu8fjqIhfuHsDihhff5Rdhm3kF0z2LaLLzhhTs4wESO/ysa
+        30Cj2Qa5x8Q38oc0LgAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="pictureBox10.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAK8SURBVDhPhZLZT1NBFIfnf/FdTXgihqKogQgii4LC
+        g74YCa4BN2SRYhFEliBLSw0gAgq9vb1bbwtUWUKCiKiA8qhBQBYRqaVssvycGZAEjXqSL+fOnHO+mUwu
+        acw4Qp5khJHm9BCSaSoiWbezkZWVBZbZmu2zOutrTA8j9dcNRPd0Es3lJpquE1J/K1R+fPMgGm4EIS07
+        Hy5XK3TdzTNbs31Wr08LlRvSDpH61EDibGunw1uC2msh8A1JmB9oRl6xGb19b9DT+4rm18grqoR/oAm+
+        QRE1qUGoSwkk+rNu4nS38mEuqE4xYGnyPd49jEPlIxGWWhssNU9RVdMAc3Ujhi2RWB7vhzV5D7Q2enV3
+        C1GdOsW5KbBeCYL3Yw/6zfF4a03AoPUkhiyxaLc9gKjqsEkqmh0qBFmDXVJgd0gUB0RZhqJpMrFeNuDL
+        cCtelMej15yIl5ZE9FXEQtDa8L8QJQmk6pIB4312dJXGobssgXIK3SVRsKktvGlkdAzjnycokzyPjo1j
+        5NMor7GbEPNFAz501eJ5cSw6SuMpcegoPAqb4uZNU9PTyM3NhaKokCQZoujAxNQUrwlccMGAYVcp2u7H
+        wFN4gnIcnvxwCFs3mJ39Bp9vnuP1fsfcnBczM7O8JogiFZwPRr+QAz0/Cq6CGLjuRUM3hW4L2KDJZIKm
+        qvD7F+CgpzIRCy6ooILuuqtQ7h6DmhcNlWbZeHhbsLC4iB+rq5zllRUsLi1h3u/ntU1BcjA85WfhuBNB
+        iYQjJwL2zBDYtU0BGzQajXDpOpxOJ30LhYtYcEE5FcgFcRDooJBzFIIxHE3pByA6W3nT+vo6z79iY2MD
+        a2tr/Js/Yv6ZfZ1lSftRlhRMofmcASWnAyC7PbzpX8F+JkJjFyXgd6jgq0NW+Cnsqjuge+wnkhTFR3v/
+        Grspf4h3Qvb+BApKtlis41k4AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pictureBox9.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAF0SURBVDhPhZPdTsJAEIW5M9GHkcTnkHsTE8WQyHMZ
+        oID9IyTqK8i915IISqG1LbQVoWSdMy5rqxW+5GSXZfbsnG1b6vX7vmHbQjdNcQsZBo+GZQnTtp9K+0Dh
+        fziOAyNNlhaDk8HzcKgEbhoNHmFCnTRk+V/QLngZjcVo/MojeBwMlEmXYqFTHCaj6XI7GdCfYDJxhDOZ
+        8jifL3htS6vTkbNvctG2BjPXFa7nsTCfzmYs0Gy3qbMRz39F05WBHwQ5vfs+C8DgjToD2WiIowwWi6hQ
+        AAau66nfW3B/yiBJPgoFmpomwjDkeNlo2KueQpqmIl2v86I1AIMojkVAJtlobIC3cB+IsFx+iiiKc9HY
+        gG4yxGWo11iqq+tCo8fXos139w9itVpTpGUuGhsQx9f1+sVVrXYOXVarZ6eVSgWdxUnCjxSbN5vNT0wZ
+        jS9RckQ6zOiAOuOiXeAQqi3G6vXmMOGvNBONRWuIjRpZXkiZdLJbpfIXwQvNhTAS2SsAAAAASUVORK5C
+        YII=
+</value>
+  </data>
+  <data name="pictureBox8.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAGNSURBVDhPY/j//z8Yo4NtO3b9gTKxArg+XAZcvHj5
+        /+q1619BuRgAw4Ct23dehsqBwbXrN/8fOHQI02QowDDg8pUr/2/cvPUaKs9w8dKV/7t27yXegClTps19
+        /er1/ytXrz8GKTh1+uz/o8dPEG8AEEgvXbHq7evXr/9fuHT58sEjx/4fOX6SJANAQH/mnHk7X73/+H/n
+        ujX/j1+8QrIBIKA0ZcHSbVdNRf/vjw/+P2fmjCCoOArAZwAIKK7JTPo/r6v7/90Ur/8XvPUkoOJwQMgA
+        hvUVOf9zi8tqd9upbT3rrv//jKfhszPextdPexmCFeM04GKAidoFH8P/55y1QYLCQKy43UZz7xEHHVAU
+        a88zU+k+7qj7GKcB53yNH/SaKBced9BBCDIwKO+31Hx62EpzPZAtdsha6xtOA854GIA4AkestZANAAHd
+        TYYqG/YZq/2fp6MwBacBJ5x0wZwDZuroBoCAIhAbA7EETgNANh8wUf8/UVWmBSqEFeA0AAhANoCwCJiH
+        A0D0/WcAAM6tXj5porEnAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pictureBox7.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAIaSURBVDhPnZNPTBNBFMafUa/qQYMGLCkaQ2Ig1EYj
+        /rt49ubBiwqJ8WJiYkS9mBATT+pZD960pYnd6S7dNshBsYhG4e5RwBZpt2gLbRa27fZz3ohbCk1I/JJf
+        Zt6+976Zyc7QqGkWhGFAi8UQbUKoUeg6YoZhyToyk8ktEBdsp1wuxwuMtDIhXpn1fXZOMo/ZuXk1csx6
+        HQ6rMZvNQtP1yGYT4m2yfqTTSGcyyCxk1MgxKxSJwMrn1Zx3Io+jxROJjQZCJTMLi/i5mPXgmDU9M6NM
+        /u2Ejxzn5rExBUXFX4OsdM9ZlgfHK+WSym1UlA3ejpM5kSJzcqphYOWXkF/61QR/y61jyZilJZKIT30m
+        s2sPmd37Gwa/C4XWFIsolEpYdiqqTpv8hNGj+8js6yAz6G8YFJdXWiAb7VWUZf7r8BBGDu7GG/9eiOOH
+        YAQ6n8dPHmkYlMrlLZRtG7bMTQ/fw8ezx4DHt4BnQ8CTO/hy6TSME/4XnoHNxZtYdRxUZS50YAfq968A
+        kvrdy8ADOX94HaL3MDyDtbWKxGnCqdZQZ4O2XcB4RNV5eqdB62mXBusXyXVduLVaMyoDhNt2ojp4HtWB
+        c3CunVFz9+ZFiD4fiB/Sdvr29BEmAu2oXD2F+mA/KgP9SF3oxsten0avQqEPfLvUC5THaYJfY9yE/j4F
+        /fYNiJ4OiIAfItglmzs1IvJJSP4LCv4HspnoDyOt+8PgffPXAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pictureBox6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAIxSURBVDhPpdPdS1NhHAfw8x9l2Cb04pIuuuymu24i
+        KTQ1pWiBYGURiMuVe0tJcLmgMTVtMMzpsKIolL2csbX30ehGCrV39/7t+5ydpquooAc+nJ3n/J7vec7v
+        7EgA/osUHjvyImQ5hKBpf504l++0+aR/GaIY5TSQjwPbiZpiCn6jRg08gKC5UUiwtoI3n5dEAfJRFOST
+        yMvtdAqV9x7OJYESgyuZX1UJbyHbDqMWsB1AMdpJPaoulONdyDiPYm14L+1pZGiC/5YGspUBIUsr7/aK
+        oecZfhGVrB5VSruOYf3x8dojfYvu+BrhkUoJpVeSSPEbW5i6jzRYNWixOtyCd0snUHrdjWKkA4XwGTpd
+        Vwy3Ax8W2Z+D6g6QY+P4zAXRQCGNSvIcyok+lOJC70+6gS0PA7iDoFnH9Xog00Od1AFkzxLPs72/l+lj
+        wNyugPUB5KJ38WAlBdeTBCUx/TRFaUw/2+HinHMljVxkHPjkrAWERMDGNTi8cbiWZdhmn2Pong83Jpdx
+        fcKLwfEFXBnz4LLtEUYcS3D5ZDgWRTOnEKoFsAdfhmD3hDBy34tsbArYvKqEKjZVW4N4E3PAYF9gbYBv
+        bpJ/KPUtoDSKCbcfAzY3L9xkoAn4bOY2SRwFZe42+k0PlVpU7ZAtOgbY2j7GrFqMza+h3+pG3KJVthYw
+        6RqIOXHt0uisUhvjb7FWfA5N1GyeeQm9aY6fl9T8JxeMM7CwVj0Xa+vjR9Hfxq46SfoOyeerzl+Ia18A
+        AAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="pictureBox4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAKDSURBVDhPjZM9TFNhFIbvYIzGwUTRSOLOonEwcXCy
+        iSQEXAyD0Q0HXTCRCVvxBwfRaByEKAGhLRg10RiDoV1YDIaEKuAPpYUoubSWttDS3rbc2/vTvp5zbAwD
+        id7k7Xfa8zznu7nfrXLoTrCrrjuIvTfHsadrHLv/EWaYZYdd5QAVMxlgMungfy9m2WFX2Xc7gK+ZCpS7
+        S9KMJjRKARHKQjyPcCyHyC8NC5x4Thhm2WFXBkylq1BcHdL0uN3weDzw+0fg9XqxnNHR2dlJ3/3weYeF
+        UVxXxZEB+7sDmIg72NE2CNOpILVZQbJURaJgU5zaaiOuWUhoJgyL2QFx2FXqaMq7H2Uc7ldRtm1cv+bG
+        iG8Ea7oDN9Wj/lH4vT6kSxZ8Q0PQTVNYdtiVAS+jOhqeqXRzNoq2g5zpYKNsI0+7cTZMG9myCc20UK1a
+        aBhUxfkzgG7DN1/CCf8KgssFGuKgQoMcCq9bwxswwyw77NIxBjDwpYjGVwmcehGnZgzHhmM4OrSCI7Vw
+        zb9xjxlm2WFXBvTNFnH27SpaXifwfHqVH/SWq0qpyMq9ljcJYdmRAQfp49HnIi6MpaiRJNBBRM1gic59
+        id6JsJrF959rCC+nqWcLwyw77MqA+580XAymcW4sCZseVsGowH2rB67TzVRXEY1vYDGWhW2UiUkJy87f
+        AT2hIq5MZNEWXIexWaadAFdjM+497JNaTWlQk3kYJUMYZtmRAfSHwIMZHTemCuj4kKddLJGams7gcW+/
+        1Gs5A+s5HZZuCsMsO+wqde1Pn3DBZ7rT8x7f5iKYno3i0uX2VuXk+dbZuUVMhsL4GJqn3oIwzIpDrkJX
+        PeX4NtlVy3a9WpT633WX8Y7EeigwAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pictureBox3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAJ6SURBVDhPbZNdTxNBGIX7G/wLRqOYIMGYaKEVURN/
+        gBfemXjhhQmgJgqpCAgxsUiMbWlA1BssH4rbrhhMFEkgISLWQrdVpEjLZ8BCv6CklO60x3e2QFvsSc6+
+        k905zzuzO6sCoHJ3XAq72i9CajsPyXwOzlYNnKYSOI3qtE1qSK2lcLdpQ6os8axycbWVK4FZ4TqCDhMS
+        q4MAmyZPAbKbLNHYjV+GQkpktA9wmkqp+BGd6cXy0H242i9g7GkZvrysRH/XM3TbPqNbGMAb2wCE9wOW
+        3XwGMGk4qwAQsQHbE0BiBiwwisD3Fsxbr2FlqJGep+X3+yHYbD05gAmDmpboAlvUgXmrIc/VI7nyAgh+
+        AHZ+wv74qBLu7OpRKodYRfEdDfcAJTRxnAB1YL5ayLM1SHjuIDF1E4i5CHBMCY7bHei0WJQxrYKXPQC9
+        g/gwAerB5h5A9upoF3eR+F0BRL/Crj+OrR0+P6M+q5WXXYCRALGPYEsNWYB7BKgEwp/wQ1+A4CbDeiCE
+        tbV1HkSfIPCyB9BQJ4EADwlQlwFMVwHrfQQ4gY04sTY2EYqEefAgQAtsvCZAYw5A9twG/r6iLRQgJlOP
+        rRii0S0ezAOIdCC53JQDSC3q4e29DI/1FuKMdhnbIW/zYC5gsrWMVmAEVh8hudAA2aeD/KcaWGiCvbkI
+        1BxJMmNMMVfuSzSXh+fEqwiPVyBJXyK1xD+njgB1cLQU8Yn/SRBFXtIA0snnVcW1I82asQljGXzCFQRH
+        byA1XwPJcBpv+wepo6gsm3fmZ4DOw3A2gOsQ+Qj5VHtlsW7kifabZKa/03gmyO/l8eGDgGztw8iF/EY+
+        AVD9A2v4zMuwTEzKAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAABidJREFUaEPt
+        mE1oVFcUx6WIiBQJIRQRCaVI6CILKV0UKdJF6EKkC+miiJSCjUKIRUyC4EIwYpoQQ0g0UfNhNIlfWSTi
+        VzQm0ZjESRzHJESQLkqXLqSEIkOREl7/v8s9w3SYaT5mJm7mwOHNvHfPOf//Oeeed2fW5SQnOclJTnKy
+        EqmsrCxsbW3de/bs2X26Fp0/f369f7RqkY8t586d2yOf+1taWnZcuHBhg3+UWZHzvRcvXvyjt7c3uHr1
+        atDR0bGgwEcE4CO/ZMWiJHwt+0hPT09w7dq1oKurK6p7v+reRr8kM6Ks7Mb5kydPgnA47HRqasoREYl6
+        v2xFIqAlbW1tC8PDw8GLFy9iPvv6+gI9W5XPpEKbyOHAyMiICzA4OOh0cnLSBV4NCfn7tr29/S0JwcfQ
+        0FBw7969gO/EULL+VsW3+eXpiYIVdnZ2/objhw8fBnfv3nXB0PHxcQeA8kNiOe0EeDI/NjbmbB88eBDc
+        v38/5pNK3LhxY1H+dnuT9EQBC9T7ITI+OjrqglgVUEhEIpEYCW+WVOSrRJlfePr0aSzz5gcSkIGA9tk/
+        qsAX3ix9kbO6W7duOaCPHj2KBTOF3MuXL/+XhHy4toEwa/GDLVU1EoAnSUpYRNXM3DSSs63KXoggRoLP
+        BDd99uxZMDMzk7SdaBsyD3jWsJ/IPmpJeP78uaum2vUvrd/lTTMnclokDQOcDAKCwICAEAqJ2dnZ4Pr1
+        67FKyKaEkQs4nmFn67GFPJnnuda90/rvXMBsiJx/Jo1AgkxSbgAAhnHIdXp62kgsNjc3TyrzbyYmJoK5
+        uTm3HgLxJNgLPBf4qNose+BNRGC7dIbsGwkyacBQI8FMZ8POz8+7EWkEjCzg2T9UaE3Am4iAaydIABRw
+        gAKgKWP31atXjiQkHj9+7NRIGnj1fHbbJpUoqGsnsk97QAJggOczSl8z7+27kWMP+cxHtVfWHryJCLh2
+        MhJk2ggA3JTvZJ9nVITNrsyvbdukEhGgnULx7WR9zhXgRoBp49uGUfnhwZvoKFym80sQCoXchr5z545T
+        jh320uM+fX/z5s1A02nam354oQ2YImScTMeDT1QqQgU4AMqubjlnp6wKbcDLB2BsWM5JALWDWTKllZhQ
+        nkTmjs0rFcs8G5OsJgPLS46XHp+52mcqBQl+HC11AMyKePBRwDNR7DjMFQUoE4k9wXP63+6nIrFm7WRt
+        Y+ABZODsSkUA2N3d7cAClDcvz9jQXFFIrmklyDynSsCT3XjQpgb+8uXLjMoj/JaABMeLVCTwlXUSGpWA
+        jzJtrG2SgefFdeXKlXcNDQ0/YFdXV+dedkYCe9YaCe6zsfHJj3umkwuYSVF2duqH/Z9kMHHaGBHuk3mB
+        j545c2afN3Vy7NixItmHGa+0TPyeMF82DKiECP/iTTMj+g3bRXCbNgbernaEEPj3yvh+bA4cOLBeugHl
+        e1VV1edqpzn8kG0mFLam3CcB6KVLl97W1tYWYJe2HD58eJtaJwJAKpA452kZ3gPq+aiC/oSNQG+Sfhyv
+        3BeJYk0bR4LfAFSAz/gxvyRJ74jFmpqaPd4XiVj+hGKxVwzXi8B2ZS4MyEQC9C49zd8gp0+fListLQVs
+        njQ/hW4Sia/UInO3b992bcdewKf55Z7aaPHUqVPfs16KT0fC1ENNLn4RBhjnHTp0KK++vr6TH/U4p38J
+        SqkhJPDvq6urjwj8Fq3fKuVakEQ/kfK8oKKi4htt1tdGAp9UA598Vsu+KS8vL/Y2EP8PCQ81tfjFGBE4
+        XwF3qfSvBwYGYqdMsqVejZ48ebJSa7ZJC6UAJChV2JygAIEca7ccPXq0RCTm+/v7Yz+GIME+ks9yvxaN
+        EfDwlhYthulGKYEB5LKm6dLDXx7aE/ONjY2Dx48f/1GZB5ADxTopNlQP+3i19sIf67eKxE5t+i75nNER
+        +/empqaxEydO/Hzw4MFEfyv/i0VGRoLAZGGz2ilfe6JYuqOsrIwgOCcIwFjHelfmFGqtaRXJE9h82kU+
+        v5TPT3XPKm8+mWSrP2Zg7J1YVt1o9J/tnutPb7Kk+PXmE03mk++rB54oOPNKcNO0Anh/iT7T9puTnOQk
+        JzlZhqxb9y/IfsJRyFDF/QAAAABJRU5ErkJggg==
+</value>
+  </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>55</value>
   </metadata>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAYAEBAAAAAAIABoBAAAZgAAACAgAAAAACAAqBAAAM4EAAAwMAAAAAAgAKglAAB2FQAAQEAAAAAA
