--- a/Crypto Notepad/AboutFrom.resx
+++ b/Crypto Notepad/AboutFrom.resx
@@ -369,7 +369,7 @@
   </data>
   <data name="customRichTextBox1.Text" xml:space="preserve">
     <value>CustomSettingsProvider: http://www.codeproject.com/Articles/20917/Settings-Provider
-AES: http://easylab.net.ua/net-c-windows-forms/c-algoritm-shifrovaniya-aes
+AES: http://www.codeproject.com/Answers/391219/AES#answer2
 CustomRichTextBox: https://code.msdn.microsoft.com/windowsdesktop/How-to-find-the-text-and-e92b8d78
 MsgBoxCenterParent: http://stackoverflow.com/a/2576220/4430027
 Icons: http://www.fatcow.com/free-icons</value>
