--- a/Crypto Notepad/AboutFrom.resx
+++ b/Crypto Notepad/AboutFrom.resx
@@ -372,7 +372,8 @@
 AES: http://www.codeproject.com/Answers/391219/AES#answer2
 CustomRichTextBox: https://code.msdn.microsoft.com/windowsdesktop/How-to-find-the-text-and-e92b8d78
 MsgBoxCenterParent: http://stackoverflow.com/a/2576220/4430027
-Icons: http://www.fatcow.com/free-icons</value>
+Icons: http://www.fatcow.com/free-icons
+GPG: https://gpgapi.codeplex.com/</value>
   </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>44</value>
