Added DotNetZip library credentials

--- a/Crypto Notepad/AboutFrom.resx
+++ b/Crypto Notepad/AboutFrom.resx
@@ -371,6 +371,7 @@
     <value>CustomSettingsProvider: http://www.codeproject.com/Articles/20917/Settings-Provider
 MsgBoxCenterParent: http://stackoverflow.com/a/2576220/4430027
 CustomRichTextBox: https://code.msdn.microsoft.com/windowsdesktop/How-to-find-the-text-and-e92b8d78
+DotNetZip: https://www.nuget.org/packages/DotNetZip/
 Icons: http://p.yusukekamiyamane.com/
 AES: http://www.codeproject.com/Answers/391219/AES#answer2</value>
   </data>
