Settings button on toolbar was moved

--- a/Crypto Notepad/MainForm.resx
+++ b/Crypto Notepad/MainForm.resx
@@ -162,7 +162,7 @@
         JzlZhqxb9y/IfsJRyFDF/QAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="AutoLockToolbarButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="LockToolbarButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
         dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAIdSURBVDhPlZPdS5NRHMd/5zkQeNtFF0H9A9aVBF12
