Custom "RichTextBox" replaced to common "RichTextBox"

--- a/Crypto Notepad/AboutFrom.resx
+++ b/Crypto Notepad/AboutFrom.resx
@@ -371,11 +371,9 @@
     <value>Line Numbers for RichTextBox: https://www.codeproject.com/Articles/38858/Line-Numbers-for-RichText-Control-in-C
 CustomSettingsProvider: http://www.codeproject.com/Articles/20917/Settings-Provider
 MsgBoxCenterParent: http://stackoverflow.com/a/2576220/4430027
-CustomRichTextBox: https://code.msdn.microsoft.com/windowsdesktop/How-to-find-the-text-and-e92b8d78
 DotNetZip: https://www.nuget.org/packages/DotNetZip/
 Icons: http://p.yusukekamiyamane.com/
-AES: http://www.codeproject.com/Answers/391219/AES#answer2
-</value>
+AES: http://www.codeproject.com/Answers/391219/AES#answer2</value>
   </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>44</value>
